[package]
name = "megacommerce-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
megacommerce-proto = "0.1.60"
megacommerce-shared = "0.1.0"
tokio = {version = "1.45.1", features = ["full"]}
tonic = "0.13.1"
tower = "0.5.2"
http = "1.3.1"

## serialize/deserialize
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

## macros
thiserror = "2.0.12"
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["display"] }

## utils
ulid = "1.2.1"
scopeguard = "1.2.0"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

